消除javac错误